added vercel crosconfig